[package]
name = "generateciphertext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base64 = "0.21.7"
clap = { version = "4.5.1", features = ["derive"] }
rayon = "1.9.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
